test/testdata/classes/methods/static/property_accessors/clashing_method_read_write_error.lox
class Foo {
  static get bar() {}
  static set bar(_) {}
  bar() {}

  // error: static 'bar' has already been declared as a property accessor
  // lint error: static 'bar' has already been declared as a property accessor
  static bar() {}
}

_ = Foo;
